// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/ContentSidebar/Skills/SkillsSidebar should render loading indicator component when cards are not available 1`] = `
<SidebarContent
  title={
    <FormattedMessage
      defaultMessage="Skills"
      id="be.sidebarSkillsTitle"
    />
  }
>
  <LoadingIndicator />
</SidebarContent>
`;

exports[`components/ContentSidebar/Skills/SkillsSidebar should render skills sidebar component when cards are available 1`] = `
<SidebarContent
  title={
    <FormattedMessage
      defaultMessage="Skills"
      id="be.sidebarSkillsTitle"
    />
  }
>
  <SidebarSkills
    cards={Array []}
    errors={Object {}}
    file={Object {}}
    getPreviewer={[MockFunction]}
    onSkillChange={[Function]}
  />
</SidebarContent>
`;
